<resources>
    <string name="app_name">Cars</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Becky Ttendo</string>
    <string name="nav_header_subtitle">ttendobecky@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_ferrari">Ferrari</string>
    <string name="menu_mercedes">Mercedes</string>
    <string name="menu_nissan">Nissan</string>
    <string name="menu_range">Range Rover</string>
    <string name="menu_chevloret">Chevloret</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to the car app!</string>
</resources>