<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ttendo.mynavdrawerapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ttendo.mynavdrawerapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ttendo.mynavdrawerapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_ferrari"
        android:name="com.ttendo.mynavdrawerapplication.ui.ferrari.FerrariFragment"
        android:label="@string/menu_ferrari"
        tools:layout="@layout/fragment_ferrari" />
    <fragment
        android:id="@+id/nav_mercedes"
        android:name="com.ttendo.mynavdrawerapplication.ui.mercedes.MercedesFragment"
        android:label="@string/menu_mercedes"
        tools:layout="@layout/fragment_mercedes" />
    <fragment
        android:id="@+id/nav_nissan"
        android:name="com.ttendo.mynavdrawerapplication.ui.nissan.NissanFragment"
        android:label="@string/menu_nissan"
        tools:layout="@layout/fragment_nissan" />
    <fragment
        android:id="@+id/nav_range_rover"
        android:name="com.ttendo.mynavdrawerapplication.ui.rangerover.RangeRoverFragment"
        android:label="@string/menu_range"
        tools:layout="@layout/fragment_range_rover" />
    <fragment
        android:id="@+id/nav_chevloret"
        android:name="com.ttendo.mynavdrawerapplication.ui.chevloret.ChevloretFragment"
        android:label="@string/menu_chevloret"
        tools:layout="@layout/fragment_chevloret" />
</navigation>