<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_ferrari"
            android:icon="@drawable/baseline_add_card_24"
            android:title="Ferrari"/>

        <item
            android:id="@+id/nav_mercedes"
            android:icon="@drawable/baseline_add_card_24"
            android:title="Mercedes"/>

        <item
            android:id="@+id/nav_nissan"
            android:icon="@drawable/baseline_add_card_24"
            android:title="Nissan"/>

        <item
            android:id="@+id/nav_range_rover"
            android:icon="@drawable/baseline_add_card_24"
            android:title="Range Rover"/>

        <item
            android:id="@+id/nav_chevloret"
            android:icon="@drawable/baseline_add_card_24"
            android:title="Chevloret"/>

    </group>
</menu>